<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FADC03"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Fragment.ProfilFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_person_24"
        app:tint="#F44336" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/deslogin"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#F44336"
        android:text="@string/signin"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/btnGoSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/signup"
        android:textColor="#F44336"
        app:cornerRadius="20dp" />

</LinearLayout>