<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="4dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginLeft="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/produk" />

            <TextView
                android:id="@+id/foodnamepopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/name"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/price"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/foodnamepopular"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addToCart"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/add_shape"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/addcart"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/harga"
                app:layout_constraintStart_toStartOf="@+id/harga"
                app:layout_constraintTop_toBottomOf="@+id/harga" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>